--- a/Scoutingapplication2/app/src/main/res/layout/auto.xml
+++ b/Scoutingapplication2/app/src/main/res/layout/auto.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="16dp"
         android:checked="false"
         android:clickable="false"
+        android:onClick="autoline"
         android:text="@string/auto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
