--- a/Scoutingapplication2/app/src/main/res/layout/auto.xml
+++ b/Scoutingapplication2/app/src/main/res/layout/auto.xml
@@ -104,18 +104,17 @@
         app:layout_constraintVertical_bias="0.379" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/lowGoalText"
         android:layout_width="124dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="scale"
-        android:inputType="number"
+        android:inputType="none|number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
