--- a/Scoutingapplication2/app/src/main/res/layout/auto.xml
+++ b/Scoutingapplication2/app/src/main/res/layout/auto.xml
@@ -69,14 +69,15 @@
         android:id="@+id/button3"
         android:layout_width="57dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="lowGoal" android:tag="-"
-        android:text="+"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="lowGoal"
+        android:tag="-"
+        android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.202"
@@ -115,6 +116,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="none|number"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
